--- a/index.html
+++ b/index.html
@@ -27,6 +27,11 @@ function checkweather(){
 
                     document.getElementById("result").innerText = Result;
                 })
+    .catch(function (error) {
+    
+    console.log(error);
+  })
+
 
 }
 </script>
