--- a/index.html
+++ b/index.html
@@ -31,8 +31,8 @@ function checkweather(){
                 })
     .catch(function (error) {
     
-    console.log(error);
-                            document.getElementById("Error").innerText = error;
+     const Error_result = console.log(error);
+                            document.getElementById("Error").innerText = Error_result;
 
   })
 
